Fixed alignment with switch toggle buttons

--- a/src/stylesheet.scss
+++ b/src/stylesheet.scss
@@ -87,6 +87,10 @@ iframe{
   padding-top: 5rem;
   padding-bottom: 5rem;
 
+  h2{
+    margin-top: 3rem;
+  }
+
   li {
     font-family: Barlow;
   font-size: 1em;
@@ -507,32 +511,33 @@ footer {
 }
 
 .checkboxes {
-
-  .obstacleLabel{
-    margin-left: auto;
-    padding-right: auto;
-    margin-right: auto;
-    box-sizing: border-box;
-    margin-top: 4vh;
-  }
+  width: 30vw;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  margin-top: 3rem;
   
-  .foodLabel, .headLabel, .tailLabel {
-    margin-left: auto;
-    padding-right: auto;
-    margin-right: auto;
-    box-sizing: border-box;
-  }
+   .foodLabel, .headLabel, .tailLabel, .obstacleLabel {
+     box-sizing: border-box;
+     margin: 0;
+     width: auto;
+   }
 
   .obstacles, .food, .head {
-    margin-bottom: 1em;
+    margin-bottom: 2rem;
+  }
+
+  label{
+    display: inline-block;
   }
 
   .switch {
     position: relative;
-    display: block;
-    
-    width: 60px;
-    height: 34px;
+    display: inline-block;
+    width: 30px;
+    height: 17px;
+    float: right;
+    margin-right: 200px;
   }
   
   /* Hide default HTML checkbox */
@@ -558,10 +563,10 @@ footer {
   .slider:before {
     position: absolute;
     content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
+    height: 13px;
+    width: 13px;
+    left: 2px;
+    bottom: 2px;
     background-color: white;
     -webkit-transition: .4s;
     transition: .4s;
@@ -576,9 +581,9 @@ footer {
   }
   
   input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
+    -webkit-transform: translateX(13px);
+    -ms-transform: translateX(13px);
+    transform: translateX(13px);
   }
   
   /* Rounded sliders */
